Fix spacing issue

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -80,7 +80,6 @@
 
   /* Editor: */
   --billy-editor-height: 500px;
-  --billy-editor-width: 100%;
   --billy-editor-radius: 5px;
   --billy-editor-button-height: 40px;
   --billy-editor-button-width: 40px;
